# NAI-Prompt-Manager-for-Desktop

./: .gitignore
NAI Prompt Manager/: .gitignore
NAI Prompt Manager for Desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
NAI Prompt Manager for Desktop/scripts/: icloud-full-export.mjs  onedrive-mirror-export.mjs
NAI Prompt Manager for Desktop/src/: App.tsx  main.tsx
NAI Prompt Manager for Desktop/src-tauri/: Cargo.toml  tauri.conf.json
NAI Prompt Manager for Desktop/src-tauri/capabilities/: default.json
NAI Prompt Manager for Desktop/src-tauri/icons/: .gitkeep  icon.icns
NAI Prompt Manager for Desktop/src-tauri/src/: main.rs
NAI Prompt Manager for Desktop/src/lib/: danbooru-tags.ts  export.ts  i18n.ts  import-mirror.ts  png-metadata.ts  thumbnail.ts  utils.ts
NAI Prompt Manager for Desktop/src/stores/: appStore.ts  folderStore.ts  imageStore.ts  tagStore.ts
NAI Prompt Manager for Desktop/src/styles/: globals.css
nai-prompt-manager-pwa/: README.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
nai-prompt-manager-pwa/src/: App.tsx  main.tsx  vite-env.d.ts
nai-prompt-manager-pwa/src/lib/: database.ts  (+3 more)
nai-prompt-manager-pwa/supabase/: README.md  schema.sql  storage.sql
nai_prompt_manager_flutter/: README.md  pubspec.yaml
nai_prompt_manager_flutter/lib/: app.dart  main.dart
nai_prompt_manager_flutter/linux/: CMakeLists.txt
nai_prompt_manager_flutter/test/: widget_test.dart
nai_prompt_manager_flutter/windows/: CMakeLists.txt
(+123 files in other folders)
